src/index.css
@import "tailwindcss";

@custom-variant dark (&:where(.dark, .dark *));

body {
    font-family: 'Inter', sans-serif;
}

.dark {
    color-scheme: dark;
}

html {
    scroll-behavior: smooth;
}

.diamond-shape {
    clip-path: polygon(
            50% 0%,
            100% 50%,
            50% 100%,
            0% 50%
    );
}

